--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
  <meta charset="utf-8">
  <link rel="stylesheet" type="text/css" href="/src/styles.css">
- <title>My React App from Scratch</title>
+ <title>Expense Tracker</title>
 </head>
 <body>
  <div id="app"></div>
